@@ -18,12 +18,12 @@
  *
  * gparamspecs.h: GLib default param specs
  */
-#ifndef __G_PARAMSPECS_H__
-#define __G_PARAMSPECS_H__
-
 #if !defined (__GLIB_GOBJECT_H_INSIDE__) && !defined (GOBJECT_COMPILATION)
 #error "Only <glib-object.h> can be included directly."
 #endif
+
+#ifndef __G_PARAMSPECS_H__
+#define __G_PARAMSPECS_H__
 
 #include        <gobject/gvalue.h>
 #include        <gobject/genums.h>
